--- a/prj_src/APS/project/opl1000/opl1000_sdk_m3.uvprojx
+++ b/prj_src/APS/project/opl1000/opl1000_sdk_m3.uvprojx
@@ -15,7 +15,7 @@
         <TargetCommonOption>
           <Device>ARMCM3</Device>
           <Vendor>ARM</Vendor>
-          <PackID>ARM.CMSIS.5.6.0</PackID>
+          <PackID>ARM.CMSIS.4.5.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IRAM(0x20000000,0x20000) IROM(0x00000000,0x40000) CPUTYPE("Cortex-M3") CLOCK(12000000) ESEL ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -502,6 +502,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\APS_PATCH\middleware\netlink\at\at_cmd_ble_patch.c</FilePath>
             </File>
+            <File>
+              <FileName>at_cmd_rf_patch.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\APS_PATCH\middleware\netlink\at\at_cmd_rf_patch.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -551,6 +556,11 @@
               <FileName>dhcp_patch.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\APS_PATCH\middleware\third_party\lwip-2.0.3\lwip\src\core\ipv4\dhcp_patch.c</FilePath>
+            </File>
+            <File>
+              <FileName>etharp_patch.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\APS_PATCH\middleware\third_party\lwip-2.0.3\lwip\src\core\ipv4\etharp_patch.c</FilePath>
             </File>
           </Files>
         </Group>
